[gd_scene load_steps=7 format=3 uid="uid://cqnqw3mij2si3"]

[ext_resource type="Texture2D" uid="uid://ck22sukwgu5pu" path="res://assets/1 - 4.png" id="1_c01mt"]
[ext_resource type="Script" uid="uid://dj3d341tsfmsx" path="res://scripts/game_manager.gd" id="1_rtedj"]
[ext_resource type="PackedScene" uid="uid://bw64pycb751fj" path="res://scenes/level.tscn" id="2_rtedj"]
[ext_resource type="PackedScene" uid="uid://dawcxst5kmvnp" path="res://scenes/player.tscn" id="3_0bbpv"]
[ext_resource type="PackedScene" uid="uid://cr2bv346s7nh6" path="res://scenes/question_ui.tscn" id="3_vcsgt"]
[ext_resource type="Texture2D" uid="uid://bfs7ytnewnekx" path="res://assets/ready_goo-removebg-preview.png" id="6_c01mt"]

[node name="Main" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 3.0
offset_right = 703.0
offset_bottom = 1000.0
texture = ExtResource("1_c01mt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(348, 501)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_rtedj")

[node name="Grid" type="GridContainer" parent="GameManager"]
anchors_preset = -1
anchor_left = -1.91743
anchor_top = -1.395
anchor_right = -1.91743
anchor_bottom = -1.395
offset_left = 902.2
offset_top = 277.0
offset_right = 2040.2
offset_bottom = 2389.0
metadata/_edit_use_anchors_ = true

[node name="Level1" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(643.001, 1559)

[node name="player" parent="GameManager/Grid/Level1" instance=ExtResource("3_0bbpv")]
position = Vector2(298, -503)

[node name="Level2" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(643.001, 1643)

[node name="Level3" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(644.001, 1728)

[node name="Level4" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(643, 1816)

[node name="Level5" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(645, 1898)

[node name="Level6" parent="GameManager/Grid" instance=ExtResource("2_rtedj")]
position = Vector2(643, 1981)

[node name="QuestionUI" parent="." instance=ExtResource("3_vcsgt")]
offset_left = 362.0
offset_top = 260.0
offset_right = 362.0
offset_bottom = 260.0

[node name="ReadyScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ReadyScreen"]
modulate = Color(1, 1, 1, 0.929412)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -504.0
offset_right = 922.0
offset_bottom = 1169.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyImage" type="TextureRect" parent="ReadyScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -191.5
offset_right = 792.5
offset_bottom = 808.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.36, 0.36)
texture = ExtResource("6_c01mt")
